fix doubled scrollbar in Codemirror

--- a/src/examples/interactives/interactives.sass
+++ b/src/examples/interactives/interactives.sass
@@ -38,11 +38,10 @@
 .CodeMirror
   background: #fff
   margin: 0.7em 0.5em
-  padding: 0.5em 0.5em 0.5em 0em
 
 .CodeMirror-scroll
-  height: auto
-  overflow: visible
+  height: 45em
+  overflow: auto
 
 .interactive-top
   position: relative
